0.03

0.02 2023-05-23T11:59:56+02:00
 - Add description about tool to doc.
 - Add option for match string.
 - Fix example in doc.
 - Fix test dependencies.
 - Update Module::Install to 1.21 version.

0.01 2023-04-26T23:06:30+02:00
 - First version.