@@ -1,4 +1,5 @@
 0.03
+ - Add -i option for ignoring of errors.
 
 0.02 2023-05-23T11:59:56+02:00
  - Add description about tool to doc.
